mapper initialization